--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    width: vw;
+    width: 100%;
     height: 150vh;
     background-color: antiquewhite;
 }
@@ -52,6 +52,7 @@ a {
 }
 
 .navbar__menubar {
+    margin: 0;
     display: flex;
     justify-content: center;
     font-size: 1rem;
@@ -97,4 +98,48 @@ a {
 
 .navbar__search input::placeholder {
     color: aliceblue;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar__logo {
+        margin: 0.5em 0;
+    }
+
+    .navbar__logo i,
+    .navbar__logo p {
+        padding: 0 0.3em;
+        margin: 0;
+    }
+
+    .navbar__menubar {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .navbar__menubar li {
+        width: 100%;
+        box-sizing: border-box;
+        text-align: center;
+    }
+
+    .navbar__menubar li:hover {
+        border-radius: 0;
+    }
+
+    .navbar__search {
+        justify-content: center;
+        width: 100%;
+        margin: 0.5em 0 1.5em 0;
+    }
+
+    .navbar__search input {
+        margin-right: 0;
+        width: 40%;
+    }
 }
